[package]
name = "async-rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.47.1", features = ["full"]}
reqwest = {version = "0.12.22", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
dirs = "6.0.0"
futures = "0.3.31"